# SDImagePreprocess

./: CMakeLists.txt  README.md
DanbooruTagger/: DanbooruTagger.py  deepdanbooru_onnx.py  utils.py  wd_onnx.py
DanbooruTagger/deepdanbooru_onnx/: deepdanbooru_onnx.py
LLavaTagger/: LLavaTagger.py  README.md  requirements.txt
PersonDatasetAssembler/: PersonDatasetAssembler.py  README.md  requirements.txt
SmartCrop/: CMakeLists.txt  README.md  facerecognizer.cpp  facerecognizer.h  incbin.h  intelligentroi.cpp  intelligentroi.h  log.cpp  log.h  main.cpp  options.h  readfile.h  seamcarving.cpp  seamcarving.h  tokenize.cpp  tokenize.h  utils.cpp  utils.h  yolo.cpp  yolo.h
Weights/: classes.txt
